# llvm-lib-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lints.yml
src/: basic_block.rs  builder.rs  context.rs  core.rs  lib.rs  macros.rs  module.rs  types.rs  value.rs
src/core/: context.rs  mod.rs  module.rs  types.rs  value.rs
src/core/types/: float.rs  function.rs  int.rs  mod.rs  other.rs  sequential.rs  structs.rs
src/core/values/: general.rs  mod.rs  uses.rs
src/core/values/constants/: composite.rs  expressions.rs  global_aliases.rs  global_values.rs  global_variables.rs  mod.rs  scalar.rs
src/core/values/function_values/: function_parameters.rs  mod.rs
